--- a/presentation.html
+++ b/presentation.html
@@ -200,11 +200,11 @@
             <h2 class="bad" style="margin-bottom: 20px;">⚠️ AI는 만능이 아닙니다</h2>
             <div
                 style="display: flex; gap: 20px; justify-content: center; align-items: center; width: 100%; height: 80vh;">
-                <img src="PPT/1.png"
+                <img src="https://gesori-pro.github.io/ProjectUT/PPT/1.png"
                     style="max-height: 80vh; width: 28vw; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.3); object-fit: contain;">
-                <img src="PPT/2.png"
+                <img src="https://gesori-pro.github.io/ProjectUT/PPT/2.png"
                     style="max-height: 80vh; width: 28vw; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.3); object-fit: contain;">
-                <img src="PPT/3.png"
+                <img src="https://gesori-pro.github.io/ProjectUT/PPT/3.png"
                     style="max-height: 80vh; width: 28vw; border-radius: 10px; box-shadow: 0 5px 15px rgba(0,0,0,0.3); object-fit: contain;">
             </div>
         </div>
@@ -224,7 +224,7 @@
         <div class="slide">
             <h2>이 친구가 누구냐고요?</h2>
             <div style="display: flex; gap: 80px; align-items: center; justify-content: center; width: 90vw;">
-                <img src="PPT/4.jpg"
+                <img src="https://gesori-pro.github.io/ProjectUT/PPT/4.jpg"
                     style="max-height: 65vh; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.4); border: 3px solid rgba(255,255,255,0.2);">
                 <div style="text-align: left; flex: 1; white-space: nowrap;">
                     <ul style="font-size: 1.5em; list-style: none;">
@@ -309,7 +309,7 @@
                 </div>
                 <!-- 이미지 영역 -->
                 <div style="display: flex; justify-content: center; align-items: center;">
-                    <img src="PPT/4.png"
+                    <img src="https://gesori-pro.github.io/ProjectUT/PPT/4.png"
                         style="max-height: 80vh; width: 45vw; border-radius: 15px; box-shadow: 0 10px 30px rgba(0,0,0,0.5); object-fit: contain;">
                 </div>
             </div>
