--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visual Novel - Project Untitled</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://gesori-pro.github.io/ProjectUT/style.css">
 </head>
 
 <body>
@@ -37,8 +37,8 @@
         </div>
     </div>
 
-    <script src="script-data.js"></script>
-    <script src="game.js"></script>
+    <script src="https://gesori-pro.github.io/ProjectUT/script-data.js"></script>
+    <script src="https://gesori-pro.github.io/ProjectUT/game.js"></script>
 </body>
 
 </html>
